--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^4.7.2",
     "react-router-dom": "^6.21.1",
     "tailwindcss": "^3.4.0"
   }
